ADD ENDPOINT PUT RESULT
